<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="logout">Keluar</string>
    <string name="list_story">List Story</string>
    <string name="detail_story">Detail Story</string>
    <string name="description">Deskripsi</string>
    <string name="camera">Camera</string>
    <string name="add_story">Add Story</string>
    <string name="gallery">Gallery</string>
    <string name="password_error">Password tidak boleh kurang dari 8 karakter</string>
    <string name="email_error">Email tidak valid</string>
    <string name="title_activity_maps">Maps Story</string>
</resources>